added global theme

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,13 @@
-@forward "reset";
-@forward "variables/global";
+@use "reset" as *;
+@use "variables/global" as *;
+@use "themes/dark" as *;
+@use "themes/light" as *;
 
 .app {
     font: var(--font-m);
+
+    background-color: var(--bg-color);
+    color: var(--primary-color);
+
+    min-height: 100vh;
 }
