--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,9 @@
 .app.dark {
   --bg-color: #0303a6;
+  --inverted-bg-color: #d4d4d9;
 
   --primary-color: #06d706;
   --secondary-color: #03a203;
+  --inverted-primary-color: #1616ad;
+  --inverted-secondary-color: #0101e3;
 }
