--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -1,3 +1,12 @@
 .Button {
+  cursor: pointer;
+  color: var(--primary-color);
+}
 
+.clear {
+  padding: 0;
+  margin: 0;
+  background: none;
+  border: none;
+  outline: none;
 }
