--- a/src/widgets/ui/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/ui/Sidebar/ui/Sidebar.module.scss
@@ -18,3 +18,12 @@
   height: 100%;
   justify-content: space-between;
 }
+
+.bottom {
+  display: flex;
+  flex-direction: column;
+}
+
+.button {
+  color: var(--inverted-primary-color);
+}
