--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -33,19 +33,19 @@
     padding: 0;
 }
 
-.square.size_m {
+.size_m {
     width: var(--font-line-m);
     height: var(--font-line-m);
     font-size: var(--font-size-m);
 }
 
-.square.size_l {
+.size_l {
     width: var(--font-line-l);
     height: var(--font-line-l);
     font-size: var(--font-size-l);
 }
 
-.square.size_xl {
+.size_xl {
     width: var(--font-line-xl);
     height: var(--font-line-xl);
     font-size: var(--font-size-xl);
