--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -6,16 +6,13 @@
     transition: width 0.3s;
 }
 
-.collapsed {
-    width: var(--sidebar-width-collapsed);
-}
-
 .switchers {
     position: absolute;
     bottom: 20px;
     display: flex;
     justify-content: center;
     width: 100%;
+    transition: 0.1s;
 }
 
 .lang {
@@ -26,4 +23,43 @@
     position: absolute;
     right: -32px;
     bottom: 32px;
+}
+
+.links {
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.link_wrapper {
+    display: flex;
+    justify-items: center;
+}
+
+.linkText {
+    display: flex;
+    margin-left: 5px;
+}
+
+.svg {
+    fill: var(--inverted-primary-color);
+}
+
+.collapsed {
+    width: var(--sidebar-width-collapsed);
+
+    .switchers {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .lang {
+        margin-left: 0;
+    }
+
+    .linkText {
+        display: none;
+    }
 }
