--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -13,8 +13,8 @@
     background-color: var(--bg-color);
     padding: 20px;
     max-width: 60%;
-    transition: 0.3s transform;
-    transform: scale(0.7);
+    transition: transform 0.3s;
+    transform: scale(0.6);
 }
 
 .open {
@@ -27,4 +27,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .content {
+        transform: scale(1);
+    }
 }
