--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -1,8 +1,10 @@
-.Input_Wrapper {
+.Input {
     width: auto;
+    color: var(--primary-color);
+    border-radius: 3px;
+    border: none;
 }
 
-.Input {
-    width: 100%;
-    color: var(--primary-color);
+.focus {
+    color: var(--inverted-primary-color);
 }
