--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -14,4 +14,8 @@
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
+
+    // Цвета
+    --red-light: #ff1b1b;
+    --red-dark: #b40c0c;
 }
