--- a/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
+++ b/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
@@ -18,3 +18,22 @@
 .input {
     margin-bottom: 10px;
 }
+
+.loading,
+.error {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.left {
+    text-align: left;
+}
+
+.center {
+    text-align: center;
+}
+
+.right {
+    text-align: right;
+}
