--- a/src/entities/Profile/ui/ProfileCardHeader/ProfileCardHeader.module.scss
+++ b/src/entities/Profile/ui/ProfileCardHeader/ProfileCardHeader.module.scss
@@ -5,3 +5,12 @@
     align-items: center;
     margin-bottom: 20px;
 }
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+}
+
+.left_button {
+    margin-right: 10px;
+}
