--- a/src/app/styles/themes/orange.scss
+++ b/src/app/styles/themes/orange.scss
@@ -5,4 +5,8 @@
     --secondary-color: #b84905;
     --inverted-primary-color: #21f0f9;
     --inverted-secondary-color: #47b6fa;
+
+    // skeleton
+    --skeleton-color: #ffff;
+    --skeleton-shadow: rgba(0 0 0 / 20%);
 }
