--- a/src/entities/ArticleDetails/ui/ArticleDiteis/ui/ArticleDetailsText/ArticleDetailsText.module.scss
+++ b/src/entities/ArticleDetails/ui/ArticleDiteis/ui/ArticleDetailsText/ArticleDetailsText.module.scss
@@ -1,3 +1,13 @@
 .ArticleDetailsText {
+    margin-bottom: 30px;
+}
 
+.title {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.ident {
+    text-indent: 20px;
+    margin-bottom: 10px;
 }
