--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -9,4 +9,7 @@
     // skeleton
     --skeleton-color: #ffff;
     --skeleton-shadow: rgba(0 0 0 / 20%);
+
+    // code
+    --code-bg: #afafaf; /* Светло-серый */
 }
