--- a/src/app/styles/themes/orange.scss
+++ b/src/app/styles/themes/orange.scss
@@ -9,4 +9,7 @@
     // skeleton
     --skeleton-color: #ffff;
     --skeleton-shadow: rgba(0 0 0 / 20%);
+
+    // code
+    --code-bg: #b6e5f8; /* Светло-голубой */
 }
