--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -7,8 +7,8 @@
     --inverted-secondary-color: #049604;
 
     // skeleton
-    --skeleton-color: #ffff;
-    --skeleton-shadow: rgba(0 0 0 / 20%);
+    --skeleton-color: #122b72;
+    --skeleton-shadow: rgb(4, 204, 95);
 
     // code
     --code-bg: #afafaf; /* Светло-серый */
