--- a/src/app/styles/themes/orange.scss
+++ b/src/app/styles/themes/orange.scss
@@ -7,8 +7,8 @@
     --inverted-secondary-color: #47b6fa;
 
     // skeleton
-    --skeleton-color: #ffff;
-    --skeleton-shadow: rgba(0 0 0 / 20%);
+    --skeleton-color: #771414;
+    --skeleton-shadow: rgb(199, 0, 0);
 
     // code
     --code-bg: #b6e5f8; /* Светло-голубой */
