--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -23,5 +23,5 @@ body {
     padding: 20px 20px 20px 45px;
     overflow-y: auto;
     max-height: calc(100vh - var(--navbar-height));
-    width: 100%;
+    flex-shrink: 100;
 }
