--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -1,4 +1,77 @@
+.ArticleListItem {
+    margin: 10px;
+}
+
+.tags {
+    display: flex;
+    gap: 4px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.tags p:not(:last-child)::after {
+    content: ", ";
+}
+
 .big {
+    display: flex;
+    flex-direction: column;
+
+    .container {
+        width: 100%;
+        min-height: 200px;
+        background-color: var(--bg-card);
+        padding: 15px;
+        border-radius: 13px;
+        transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    .container:hover {
+        opacity: 0.8;
+    }
+
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .user {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .title {
+        margin-bottom: 10px;
+    }
+
+    .img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        margin: 10px 0;
+    }
+
+    .blockText {
+        height: 200px;
+        overflow: hidden;
+    }
+
+    .footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .viewsWrapper {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 
 }
 
@@ -26,16 +99,7 @@
     }
 
     .tags {
-        display: flex;
-        gap: 4px;
-        width: 100px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-    .tags p:not(:last-child)::after {
-        content: ", ";
+        width: 120px;
     }
 
     .viewsWrapper {
