--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -10,6 +10,10 @@
     text-overflow: ellipsis;
 }
 
+.isLoading {
+    gap: 30px;
+}
+
 .tags p:not(:last-child)::after {
     content: ", ";
 }
@@ -35,6 +39,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin-bottom: 10px;
     }
 
     .user {
@@ -43,6 +48,7 @@
         justify-content: center;
         align-items: center;
         gap: 10px;
+        margin-bottom: 10px;
     }
 
     .title {
@@ -59,6 +65,7 @@
     .blockText {
         height: 200px;
         overflow: hidden;
+        margin-bottom: 10px;
     }
 
     .footer {
@@ -72,7 +79,6 @@
         align-items: center;
         gap: 10px;
     }
-
 }
 
 .small {
