--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -62,6 +62,7 @@ a {
 
     .img {
         width: 100%;
+        min-width: 631px;
         height: 200px;
         object-fit: cover;
         margin: 10px 0;
