--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -27,11 +27,8 @@
 }
 
 .links {
-    padding-top: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+    margin-top: 20px;
+    margin-left: 30px;
 }
 
 .link_wrapper {
