--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -16,6 +16,16 @@
     }
 }
 
+.size_s {
+    .title {
+        font: var(--font-m);
+    }
+
+    .text {
+        font: var(--font-s);
+    }
+}
+
 .size_m {
     .title {
         font: var(--font-l);
@@ -36,12 +46,3 @@
     }
 }
 
-.size_xl {
-    .title {
-        font: var(--font-xxl);
-    }
-
-    .text {
-        font: var(--font-xl);
-    }
-}
